--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -15,9 +15,9 @@
 		journal="XIth Blois Conference"
 }
 
-
 @Techreport{totem-rp-naming,
-	author			= "Ruggiero, G.",
+    collaboration  = "TOTEM",
+	author			= "G. Ruggiero",
 	institution		= "TOTEM",
 	title			= "Product breakdown structure and naming scheme of the Roman Pot System",
 	type			= "EDMS Document"
@@ -26,8 +26,8 @@
 }
 
 @Article{totem10,
-      author         = "Antchev, G. and Aspell, P. and Atanassov, I. and Avati,
-                        V. and Berardi, V. and others",
+      collaboration  = "TOTEM",
+      author         = "G. Antchev et al.",
       title          = "The TOTEM detector at LHC",
       journal        = "Nucl.Instrum.Meth.",
       volume         = "A617",
@@ -37,9 +37,9 @@
 }
 
 @Article{totem08,
-      author         = "Anelli, G. and others",
+      collaboration  = "TOTEM",
+      author         = "G. Anelli et al.",
       title          = "The TOTEM experiment at the CERN Large Hadron Collider",
-      collaboration  = "TOTEM Collaboration",
       journal        = "JINST",
       volume         = "3",
       pages          = "S08007",
@@ -48,16 +48,14 @@
 }
 
 @Article{hubert,
-      author         = "Niewiadomski, Hubert",
+      author         = "H. Niewiadomski",
       title          = "Reconstruction of protons in the TOTEM roman pot
                         detectors at the LHC",
       year           = "2008",
 }
 
 @Article{vfat,
-      author       = "Aspell, P and Avati, V and Bialas, W and Kaspar, J and
-                      Kopal, J and Petäjäjärvi, J and Radicioni, E and Rouet, J
-                      and Snoeys, W and Vichoudis, P",
+      author       = "P. Aspell et al.",
       title        = "The VFAT Production Test Platform for the TOTEM Experiment",
       year         = "2008",
 	  url		   = "http://cdsweb.cern.ch/record/1159891/files/p544.pdf"
@@ -67,7 +65,7 @@
 #------------------------------------------- ELASTIC MODELS -----------------------------------------
 
 @Article{islam87,
-		author="M. M. Islam, V. Innocente, T. Fearnley, G. Sanguietti",
+		author="M. M. Islam, V. Innocente, T. Fearnley and G. Sanguietti",
 		title="High energy $pp$ and $\bar p p$ Elastic Scattering and Nucleon Structure",
 		journal="Europhys. Lett.",
 		volume="4",
@@ -76,7 +74,7 @@
 }
 
 @Article{islam03,
-		author="M. M. Islam, R. J. Luddy, A. V. Prokudin",
+		author="M. M. Islam, R. J. Luddy and A. V. Prokudin",
 		title="pp elastic scattering at LHC and nucleon structure",
 		journal="Mod. Phys. Lett. ",
 		volume="A18",
@@ -87,7 +85,7 @@
     
 
 @Article{islam04,
-		author="Islam, M. M. and Luddy, R. J. and Prokudin, A. V.",
+		author="M. M. Islam, R. J. Luddy and A. V. Prokudin",
 		title="pp elastic scattering at LHC in near forward direction",
 		journal="Phys. Lett.",
 		volume="B605",
@@ -97,20 +95,18 @@
 
 % the review
 @Article{islam06,
-     author    = "Islam, M. M. and Luddy, R. J. and Prokudin, A. V.",
+     author    = "M. M. Islam, R. J. Luddy and A. V. Prokudin",
      title     = "Near forward $p p$ elastic scattering at LHC and nucleon
                   structure",
      journal   = "Int. J. Mod. Phys.",
      volume    = "A21",
      year      = "2006",
      pages     = "1-42",
-     eprint    = "hep-ph/0508200",
-     archivePrefix = "arXiv",
      doi       = "10.1142/S0217751X06033271",
 }
 
 @Article{islam07,
-     author    = "Islam, M. M. and Kaspar, J. and Luddy, R. J.",
+     author    = "M. M. Islam, J. Ka\v spar and R. J. Luddy",
      title     = "pp Elastic Scattering at LHC in a Nucleon-Structure Model",
      year      = "2007",
 	 journal	= "12th Blois conference, Hamburg"
@@ -118,7 +114,7 @@
 }
 
 @Article{islam09,
-      author         = "Islam, M.M. and Kaspar, J. and Luddy, R.J.",
+      author         = "M. M. Islam, J. Ka\v spar and R. J. Luddy",
       title          = "Deep-elastic p p scattering at LHC from low-x gluons",
       journal        = "Mod.Phys.Lett.",
       volume         = "A24",
@@ -128,18 +124,17 @@
 }
 
 @Article{wu70,
-     author    = "Cheng, Hung and Wu, T. T.",
+     author    = "H. Cheng and T. T. Wu",
      title     = "Limit of Cross-Sections at Infinite Energy",
      journal   = "Phys. Rev. Lett.",
      volume    = "24",
      year      = "1970",
      pages     = "1456-1460",
      doi       = "10.1103/PhysRevLett.24.1456",
-     SLACcitation  = "%%CITATION = PRLTA,24,1456;%%"
 }
 
 @Article{bsw79,
-     author    = "Bourrely, C. and Soffer, Jacques and Wu, Tai Tsun",
+     author    = "C. Bourrely, J. Soffer and T. T. Wu",
      title     = "A New Impact Picture for Low and High-Energy Proton Proton
                   Elastic Scattering",
      journal   = "Phys. Rev.",
@@ -147,11 +142,10 @@
      year      = "1979",
      pages     = "3249",
      doi       = "10.1103/PhysRevD.19.3249",
-     SLACcitation  = "%%CITATION = PHRVA,D19,3249;%%"
 }
 
 @Article{bsw84,
-     author    = "Bourrely, C. and Soffer, Jacques and Wu, T. T.",
+     author    = "C. Bourrely, J. Soffer and T. T. Wu",
      title     = "Impact Picture Expectations for Very High-Energy Elastic
                   $p p$ and $p \bar p$ Scattering",
      journal   = "Nucl. Phys.",
@@ -159,25 +153,21 @@
      year      = "1984",
      pages     = "15",
      doi       = "10.1016/0550-3213(84)90369-9",
-     SLACcitation  = "%%CITATION = NUPHA,B247,15;%%"
 }
 
 @Article{bsw03,
-     author    = "Bourrely, Claude and Soffer, Jacques and Wu, Tai Tsun",
+     author    = "C. Bourrely, J. Soffer and T. T. Wu",
      title     = "Impact picture phenomenology for $\pi^+$ -p, $K^+$ -p and
                   $p p$, $\bar p p$ elastic scattering at high-energies",
      journal   = "Eur. Phys. J.",
      volume    = "C28",
      year      = "2003",
      pages     = "97-105",
-     eprint    = "hep-ph/0210264",
-     archivePrefix = "arXiv",
      doi       = "10.1140/epjc/s2003-01159-7",
-     SLACcitation  = "%%CITATION = HEP-PH/0210264;%%"
 }
 
 @Article{bsw10,
-      author         = "Bourrely, C. and Soffer, J. and Wu, T.T.",
+      author    = "C. Bourrely, J. Soffer and T. T. Wu",
       title          = "Determination of the forward slope in $p~p$ and $\bar
                         p~p$ elastic scattering up to LHC energy",
       journal        = "Eur.Phys.J.",
@@ -185,29 +175,22 @@
       pages          = "1601",
       doi            = "10.1140/epjc/s10052-011-1601-x",
       year           = "2011",
-      eprint         = "1011.1756",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 
 @Article{bh99,
-     author    = "Block, M. M. and Gregores, E. M. and Halzen, F. and
-                  Pancheri, G.",
+     author    = "M. M. Block, E. M. Gregores, F. Halzen and G. Pancheri",
      title     = "Photon - proton and photon-photon scattering from nucleon-
                   nucleon forward amplitudes",
      journal   = "Phys. Rev.",
      volume    = "D60",
      year      = "1999",
      pages     = "054024",
-     eprint    = "hep-ph/9809403",
-     archivePrefix = "arXiv",
      doi       = "10.1103/PhysRevD.60.054024",
-     SLACcitation  = "%%CITATION = HEP-PH/9809403;%%"
 }
 
 @Article{bh11,
-      author         = "Block, Martin M. and Halzen, Francis",
+      author    	 = "M. M. Block, F. Halzen",
       title          = "Forward hadronic scattering at 7 TeV: Predictions for
                         the LHC: An Update",
       journal        = "Phys.Rev.",
@@ -215,22 +198,16 @@
       pages          = "077901",
       doi            = "10.1103/PhysRevD.83.077901",
       year           = "2011",
-      eprint         = "1102.3163",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 @Article{ppp02,
-      author         = "Petrov, V.A. and Prokudin, A.V.",
+      author         = "V. A. Petrov and A. V. Prokudin",
       title          = "The First three pomerons...",
       journal        = "Eur.Phys.J.",
       volume         = "C23",
       pages          = "135-143",
       doi            = "10.1007/s100520100838",
       year           = "2002",
-      eprint         = "hep-ph/0105209",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 @Article{jenkovszky11,
@@ -238,7 +215,6 @@
       title          = "The Pomeron and Odderon in elastic, inelastic and total
                         cross sections at the LHC",
       year           = "2011",
-      note           = "* Temporary entry *",
       eprint         = "1105.1202",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -252,17 +228,13 @@
       pages          = "1617",
       doi            = "10.1140/epjc/s10052-011-1617-2",
       year           = "2011",
-      note           = "* Temporary entry *",
-      eprint         = "1102.2844",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 #------------------------------------------ FORM FACTORS --------------------------------------------
 
 @Article{hofstadter58,
   title = "Electromagnetic Structure of the Proton and Neutron",
-  author = "Hofstadter, R.  and Bumiller, F.  and Yearian, M. R.",
+  author = "R. Hofstadter, F. Bumiller and M. R. Yearian",
   journal = "Rev. Mod. Phys.",
   volume = "30",
   number = "2",
@@ -276,7 +248,7 @@
 
 @Article{sachs62,
   title = "High-Energy Behavior of Nucleon Electromagnetic Form Factors",
-  author = "Sachs, R. G.",
+  author = "R. G. Sachs",
   journal = "Phys. Rev.",
   volume = "126",
   number = "6",
@@ -289,23 +261,18 @@
 }
 
 @Article{borkowski74,
+	author = "F. Borkowski, P. Peuser, G. G. Simon, V. H. Walther and R. D. Wendling",
 	title = "Electromagnetic form factors of the proton at low four-momentum transfer",
 	journal = "Nuclear Physics A",
 	volume = "222",
 	number = "2",
 	pages = "269 - 275",
 	year = "1974",
-	note = "",
-	issn = "0375-9474",
 	doi = "DOI: 10.1016/0375-9474(74)90392-3",
-	url = "http://www.sciencedirect.com/science/article/B6TVB-472T811-68/2/547e551a795ca37ad03fb01d70462b64",
-	author = "F. Borkowski and P. Peuser and G. G. Simon and V. H. Walther and R. D. Wendling",
-	keywords = "Nuclear reactions"
 }
 
 @Article{borkowski75,
-      author         = "Borkowski, F. and Peuser, P. and Simon, G.G. and Walther,
-                        V.H. and Wendling, R.D.",
+	  author = "F. Borkowski, P. Peuser, G. G. Simon, V. H. Walther and R. D. Wendling",
       title          = "Electromagnetic Form-Factors of the Proton at Low
                         Four-Momentum Transfer",
       journal        = "Nucl.Phys.",
@@ -316,7 +283,7 @@
 }
 
 @Article{guichon03,
-      author         = "Guichon, Pierre A.M. and Vanderhaeghen, M.",
+      author         = "P. A. M., Guichon and M. Vanderhaeghen",
       title          = "How to reconcile the Rosenbluth and the polarization
                         transfer method in the measurement of the proton
                         form-factors",
@@ -325,14 +292,11 @@
       pages          = "142303",
       doi            = "10.1103/PhysRevLett.91.142303",
       year           = "2003",
-      eprint         = "hep-ph/0306007",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 @Article{kelly04,
   title = "Simple parametrization of nucleon form factors",
-  author = "Kelly, J. J.",
+  author = "J. J. Kelly",
   journal = "Phys. Rev. C",
   volume = "70",
   number = "6",
@@ -341,11 +305,10 @@
   year = "2004",
   month = "Dec",
   doi = "10.1103/PhysRevC.70.068202",
-  publisher = "American Physical Society"
 }
 
 @Article{arrington07,
-      author         = "Arrington, J. and Melnitchouk, W. and Tjon, J.A.",
+      author         = "J. Arrington, W. Melnitchouk and J. A. Tjon",
       title          = "Global analysis of proton elastic form factor data with
                         two-photon exchange corrections",
       journal        = "Phys.Rev.",
@@ -353,13 +316,10 @@
       pages          = "035205",
       doi            = "10.1103/PhysRevC.76.035205",
       year           = "2007",
-      eprint         = "0707.1861",
-      archivePrefix  = "arXiv",
-      primaryClass   = "nucl-ex",
 }
 
 @Article{puckett10,
-      author         = "Puckett, A.J.R.",
+      author         = " A. J. R. Puckett",
       title          = "Final Results of the GEp-III Experiment and the Status
                         of the Proton Form Factors",
       collaboration  = "GEp-III Collaboration",
@@ -372,18 +332,17 @@
 #------------------------------------------ ELASTIC THEORY ------------------------------------------
 
 @Article{bethe58,
-     author    = "Bethe, H. A.",
+     author    = "H. A. Bethe",
      title     = "Scattering and polarization of protons by nuclei",
      journal   = "Annals Phys.",
      volume    = "3",
      year      = "1958",
      pages     = "190-240",
      doi       = "10.1016/0003-4916(58)90017-4",
-     SLACcitation  = "%%CITATION = APNYA,3,190;%%"
 }
 
 @Article{yennie61,
-      author         = "Yennie, D.R. and Frautschi, Steven C. and Suura, H.",
+      author         = "D. R. Yennie, S. C. Frautschi and H. Suura",
       title          = "The infrared divergence phenomena and high-energy
                         processes",
       journal        = "Annals Phys.",
@@ -395,7 +354,7 @@
 
 @Article{yennie63,
   title = "Radiative Corrections to High-Energy Scattering Processes",
-  author = "Meister, N.  and Yennie, D. R.",
+  author = "N. Meister and D. R. Yennie",
   journal = "Phys. Rev.",
   volume = "130",
   number = "3",
@@ -409,7 +368,7 @@
 
 @Article{rix66,
   title = "Separation of Strong and Electromagnetic Effects in Charged-Particle Scattering",
-  author = "Rix, J.  and Thaler, R. M.",
+  author = "J. Rix and R. M. Thaler",
   journal = "Phys. Rev.",
   volume = "152",
   number = "4",
@@ -422,22 +381,19 @@
 }
 
 @Article{locher67,
+	author = "M. P. Locher"
 	title = "Relativistic treatment of structure in the Coulomb interference problem",
 	journal = "Nuclear Physics B",
 	volume = "2",
 	number = "5",
 	pages = "525 - 531",
 	year = "1967",
-	note = "",
-	issn = "0550-3213",
 	doi = "DOI: 10.1016/0550-3213(67)90188-5",
-	url = "http://www.sciencedirect.com/science/article/B6TVC-472T6D3-2H7/2/7dbce605d1a800435973054215f10476",
-	author = "M. P. Locher"
 }
 
 
 @Article{islam67,
-      author         = "Islam, M.M.",
+      author         = "M. M. Islam",
       title          = "Bethe's Formula for Coulomb-Nuclear Interference",
       journal        = "Phys.Rev.",
       volume         = "162",
@@ -447,18 +403,17 @@
 }
 
 @Article{wy68,
-     author    = "West, Geoffrey B. and Yennie, D. R.",
+     author    = "G. B. West and D. R. Yennie",
      title     = "Coulomb interference in high-energy scattering",
      journal   = "Phys. Rev.",
      volume    = "172",
      year      = "1968",
      pages     = "1413-1422",
      doi       = "10.1103/PhysRev.172.1413",
-     SLACcitation  = "%%CITATION = PHRVA,172,1413;%%"
 }
 
 @Article{franco73,
-      author         = "Franco, V.",
+      author         = "V. Franco",
       title          = "Coulomb-nuclear interference",
       journal        = "Phys.Rev.",
       volume         = "D7",
@@ -468,6 +423,7 @@
 }
 
 @Article{islam76,
+	author = "M. M. Islam"
 	title = "Impact parameter representation from the Watson-Sommerfeld transform",
 	journal = "Nuclear Physics B",
 	volume = "104",
@@ -475,14 +431,11 @@
 	pages = "511 - 532",
 	year = "1976",
 	note = "",
-	issn = "0550-3213",
 	doi = "DOI: 10.1016/0550-3213(76)90115-2",
-	url = "http://www.sciencedirect.com/science/article/B6TVC-473DK4R-21/2/a3da8bad2cc2f3b1ddc090d5edb398df",
-	author = "M. M. Islam"
 }
 
 @Article{buttimore78,
-      author         = "Buttimore, Nigel H. and Gotsman, E. and Leader, E.",
+      author         = "N. H. Buttimore, E. Gotsman and E. Leader",
       title          = "SPIN DEPENDENT PHENOMENA INDUCED BY ELECTROMAGNETIC
                         HADRONIC INTERFERENCE AT HIGH-ENERGIES",
       journal        = "Phys.Rev.",
@@ -491,7 +444,6 @@
       doi            = "10.1103/PhysRevD.18.694",
       year           = "1978",
 }
-
 
 @Article{cahn82,
 		author="R. Cahn",
@@ -503,7 +455,7 @@
 }
 
 @Article{klk87,
-      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      author         = "V. Kundr\' at, M. Lokaj\' i\v cek and D. Krupa",
       title          = "MOMENTUM TRANSFER DEPENDENCE OF THE ELASTIC AMPLITUDE
                         PHASE IN HIGH-ENERGY HADRON SCATTERING",
       journal        = "Phys.Rev.",
@@ -514,14 +466,14 @@
 }
 
 @Article{klk88,
-      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      author         = "V. Kundr\' at, M. Lokaj\' i\v cek and D. Krupa",
       title          = "ROLE OF THE PHASE AND IMPACT PARAMETER PICTURE OF anti-p
                         p ELASTIC SCATTERING AT COLLIDER ENERGIES",
       year           = "1988",
 }
 
 @Article{kl89,
-      author         = "Kundrat, V. and Lokajicek, M.",
+      author         = "V. Kundr\' at and M. Lokaj\' i\v cek",
       title          = "CRITICAL COMMENTS ON THE STANDARD DESCRIPTION OF ELASTIC
                         HADRON SCATTERING",
       journal        = "Phys.Lett.",
@@ -532,7 +484,7 @@
 }
 
 @Article{klk89,
-      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      author         = "V. Kundr\' at, M. Lokaj\' i\v cek and D. Krupa",
       title          = "Physical meaning of the phase of high-energy elastic
                         scattering amplitude",
       journal        = "Czech.J.Phys.",
@@ -543,7 +495,7 @@
 }
 
 @Article{klk92,
-      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      author         = "V. Kundr\' at, M. Lokaj\' i\v cek and D. Krupa",
       title          = "High-energy elastic hadron scattering in Coulomb and
                         hadronic regions",
       journal        = "Phys.Rev.",
@@ -554,7 +506,7 @@
 }
 
 @Article{kl94,
-     author    = "Kundrat, V. and Lokajicek, M.",
+     author    = "V. Kundr\' at and M. Lokaj\' i\v cek",
      title     = "High-energy scattering amplitude of unpolarized and
                   charged hadrons",
      journal   = "Z. Phys.",
@@ -562,11 +514,10 @@
      year      = "1994",
      pages     = "619-630",
      doi       = "10.1007/BF01557628",
-     SLACcitation  = "%%CITATION = ZEPYA,C63,619;%%"
 }
 
 @Article{kl96,
-      author         = "Kundrat, V. and Lokajicek, M.",
+      author         = "V. Kundr\' at and M. Lokaj\' i\v cek",
       title          = "Description of high-energy elastic hadron scattering in
                         both the Coulomb and hadronic domains",
       journal        = "Mod.Phys.Lett.",
@@ -576,8 +527,19 @@
       year           = "1996",
 }
 
+@Article{martin97,
+      author         = "A. Martin",
+      title          = "A Theorem on the real part of the high-energy scattering
+                        amplitude near the forward direction",
+      journal        = "Phys.Lett.",
+      volume         = "B404",
+      pages          = "137-140",
+      doi            = "10.1016/S0370-2693(97)00510-8",
+      year           = "1997",
+}
+
 @Article{selyugin99,
-      author         = "Selyugin, Oleg V.",
+      author         = "O. V. Selyugin",
       title          = "Coulomb hadron phase factor and spin phenomena in a wide
                         region of transfer momenta",
       journal        = "Phys.Rev.",
@@ -588,20 +550,17 @@
 }
 
 @Article{kopeliovich01,
-     author    = "Kopeliovich, B. Z. and Tarasov, A. V.",
+     author    = "B. Z. Kopeliovich and A. V. Tarasov",
      title     = "The Coulomb phase revisited",
      journal   = "Phys. Lett.",
      volume    = "B497",
      year      = "2001",
      pages     = "44-48",
-     eprint    = "hep-ph/0010062",
-     archivePrefix = "arXiv",
      doi       = "10.1016/S0370-2693(00)01316-2",
-     SLACcitation  = "%%CITATION = HEP-PH/0010062;%%"
 }
 
 @Article{klk02,
-      author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
+      author         = "V. Kundr\' at, M. Lokaj\' i\v cek and D. Krupa",
       title          = "Impact parameter structure derived from elastic
                         collisions",
       journal        = "Phys.Lett.",
@@ -612,21 +571,18 @@
 }
 
 @Article{ppp03,
-     author    = "Petrov, V. A. and Predazzi, E. and Prokudin, A.",
+     author    = "V. A. Petrov, E. Predazzi and A. Prokudin",
      title     = "Coulomb interference in high-energy p p and anti-p p
                   scattering",
      journal   = "Eur. Phys. J.",
      volume    = "C28",
      year      = "2003",
      pages     = "525-533",
-     eprint    = "hep-ph/0206012",
-     archivePrefix = "arXiv",
      doi       = "10.1140/epjc/s2003-01191-7",
-     SLACcitation  = "%%CITATION = HEP-PH/0206012;%%"
 }
 
 @Article{kl03,
-      author         = "Kundrat, V. and Lokajicek, M.",
+      author         = "V. Kundr\' at and M. Lokaj\' i\v cek",
       title          = "What can high-energy elastic scattering tell us about
                         nucleon structure?",
       journal        = "Czech.J.Phys.",
@@ -637,6 +593,7 @@
 }
 
 @Article{ppp05,
+	author = "V. A. Petrov, E. Predazzi and A. Prokudin"
 	title = "Coulomb-nuclear interference in high-energy pp and  scattering",
 	journal = "Nuclear Physics B - Proceedings Supplements",
 	volume = "146",
@@ -644,14 +601,11 @@
 	pages = "182 - 184",
 	year = "2005",
 	note = "Diffraction 2004",
-	issn = "0920-5632",
 	doi = "DOI: 10.1016/j.nuclphysbps.2005.02.089",
-	url = "http://www.sciencedirect.com/science/article/B6TVD-4G4F9R2-1J/2/5015b9e740bcf47abec7858f729d9265",
-	author = "V.A. Petrov and E. Predazzi and A. Prokudin"
 }
 
 @Article{kl05,
-      author         = "Kundrat, Vojtech and Lokajicek, Milos",
+      author         = "V. Kundr\' at and M. Lokaj\' i\v cek",
       title          = "Interference between Coulomb and hadronic scattering in
                         elastic high-energy nucleon collisions",
       journal        = "Phys.Lett.",
@@ -659,13 +613,10 @@
       pages          = "102-110",
       doi            = "10.1016/j.physletb.2005.02.025",
       year           = "2005",
-      eprint         = "hep-ph/0412081",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 @Article{kl05-2,
-      author         = "Kundrat, V. and Lokajicek, M.",
+      author         = "V. Kundr\' at and M. Lokaj\' i\v cek",
       title          = "Coulomb and hadronic scattering in elastic high-energy
                         nucleon collisions",
       year           = "2005",
@@ -675,27 +626,25 @@
 }
 
 @Article{block06,
-     author    = "Block, Martin M.",
+     author    = "M. M. Block",
      title     = "Hadronic forward scattering: Predictions for the Large
                   Hadron Collider and cosmic rays",
      journal   = "Phys. Rept.",
      volume    = "436",
      year      = "2006",
      pages     = "71-215",
-     eprint    = "hep-ph/0606215",
-     archivePrefix = "arXiv",
      doi       = "10.1016/j.physrep.2006.06.003",
 }
 
 @Article{kl07,
-      author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
+      author         = "V. Kundr\' at, J. Ka\v spar and M. Lokaj\' i\v cek",
       title          = "To the theory of high-energy nucleon collisions",
       pages          = "273-278",
       year           = "2007",
 }
 
 @Article{klv07,
-      author         = "Kundrat, Vojtech and Lokajicek, Milos and Vrkoc, Ivo",
+      author         = "V. Kundr\' at, M. Lokaj\' i\v cek and I. Vrko\v c",
       title          = "Limited validity of West and Yennie integral formula for
                         elastic scattering of hadrons",
       journal        = "Phys.Lett.",
@@ -703,13 +652,10 @@
       pages          = "182-185",
       doi            = "10.1016/j.physletb.2007.09.030",
       year           = "2007",
-      eprint         = "0706.0827",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 @Article{kl09,
-      author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
+      author         = "V. Kundr\' at, J. Ka\v spar and M. Lokaj\' i\v cek",
       title          = "Theoretical aspects of high energy elastic nucleon
                         scattering",
       year           = "2009",
@@ -719,7 +665,7 @@
 }
 
 @Article{kl09-models,
-      author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos",
+      author         = "J. Ka\v spar, V. Kundr\' at and M. Lokaj\' i\v cek",
       title          = "Contemporary models of elastic nucleon scattering and
                         their predictions for LHC",
       year           = "2009",
@@ -729,7 +675,7 @@
 }
 
 @Article{kl09-structure,
-      author         = "Lokajicek, Milos V. and Kundrat, V.",
+      author         = "M. Lokaj\' i\v cek and V. Kundr\' at",
       title          = "Elastic pp scattering and the internal structure of
                         colliding protons",
       year           = "2009",
@@ -738,9 +684,8 @@
       primaryClass   = "hep-ph",
 }
 
-@Article{kl11,
-      author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos and
-                        Prochazka, Jiri",
+@Article{kklp11,
+      author         = "J. Ka\v spar, V. Kundr\' at, M. Lokaj\' i\v cek and J. Proch\' azka",
       title          = "Phenomenological models of elastic nucleon scattering
                         and predictions for LHC",
       journal        = "Nucl.Phys.",
@@ -753,7 +698,7 @@
 #--------------------------------------------- MC GENERATORS ----------------------------------------
 
 @Article{phojet,
-      author         = "Bopp, Fritz W. and Engel, R. and Ranft, J.",
+      author         = "F. W. Bopp, R. Engel and J. Ranft",
       title          = "Rapidity gaps and the PHOJET Monte Carlo",
       pages          = "729-741",
       year           = "1998",
@@ -763,64 +708,53 @@
 }
 
 @Article{pythia6,
-      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
-                        Z.",
+      author         = "T. Sjostrand, S. Mrenna and P. Z. Skands",
       title          = "PYTHIA 6.4 Physics and Manual",
       journal        = "JHEP",
       volume         = "0605",
       pages          = "026",
       doi            = "10.1088/1126-6708/2006/05/026",
       year           = "2006",
-      eprint         = "hep-ph/0603175",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 @Article{pythia8,
-      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
-                        Z.",
+      author         = "T. Sjostrand, S. Mrenna and P. Z. Skands",
       title          = "A Brief Introduction to PYTHIA 8.1",
       journal        = "Comput.Phys.Commun.",
       volume         = "178",
       pages          = "852-867",
       doi            = "10.1016/j.cpc.2008.01.036",
       year           = "2008",
-      eprint         = "0710.3820",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
 }
 
 @Article{geant4,
+	author = "S. Agostinelli et al.",
 	title = "G4--a simulation toolkit",
 	journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
 	volume = "506",
 	number = "3",
 	pages = "250 - 303",
 	year = "2003",
-	note = "",
-	issn = "0168-9002",
-	doi = "DOI: 10.1016/S0168-9002(03)01368-8",
-	url = "http://www.sciencedirect.com/science/article/B6TJM-48TJFY8-5/2/23ea98096ce11c1be446850c04cfa498",
-	author = "S. Agostinelli et al.",
+	doi = "10.1016/S0168-9002(03)01368-8",
 }
 
 #--------------------------------------------- OPTICS -----------------------------------------------
 
 @Book{wilson,
-      author         = "Wilson, E.J.N.",
+      author         = "E. J. N. Wilson",
       title          = "An introduction to particle accelerators",
 	  publisher		 = "Oxford University Press",
       year           = "2001"
 }
 
 @Url{dolezal,
-    author  = "Dole\v zal, Z.",
+    author  = "Z. Dole\v zal",
 	title = "Text k p\v redn\' a\v sce Vybran\' e kapitoly z urychlova\v cov\' e fyziky",
 	url = "http://www-ucjf.troja.mff.cuni.cz/~dolezal/teach/accel/"
 }
 
 @Book{wiedemann,
-      author         = "Wiedemann, H.",
+      author         = "H. Wiedemann",
       title          = "Particle accelerator physics: Basic principles and
                         linear beam dynamics",
       year           = "1993",
@@ -829,7 +763,7 @@
 #------------------------------------------- ALIGNMENT ----------------------------------------------
 
 @Article{Gallinaro:2006vz,
-     author    = "Gallinaro, Michele",
+     author    = "M. Gallinaro",
 	collaboration = "CDF",
      title     = "Diffractive and exclusive measurements at CDF",
      year      = "2006",
@@ -839,7 +773,7 @@
 }
 
 @Article{Goulianos:2005,
-	author			= "Goulianos, Konstantin",
+	author			= "K. Goulianos",
 	collaboration	= "CDF",
 	title			= "Alignment of the CDF roman pot spectrometer",
 	conference		= "HERA - LHC workshop",
@@ -849,8 +783,8 @@
 }
 
 @Techreport{al collim,
-	author			= "Deile, M. et al.",
-	institution		= "TOTEM",
+	author			= "M. Deile et al.",
+	collaboration	= "TOTEM",
 	title			= "Position Settings and Limits for Insertions of the TOTEM Roman Pots in Stable Beams after the 21 September 2010",
 	type			= "EDMS Document"
 	number			= "1133082"
@@ -860,13 +794,13 @@
 #------------------------------------------- STATISTICS ---------------------------------------------
 
 @Book{becvar,
-	author="Be\v cv\'a\v r, F.",
+	author="F. Be\v cv\'a\v r",
 	title="Lecture notes",
 	year="2001"
 }
 
 @Book{barlow,
-	author    = "Barlow, R. J.",
+	author    = "R. J. Barlow",
 	title     = "Statistics: a guide to the use of statistical methods in the physical sciences.",
 	publisher = "Wiley",
 	year	  = "1989"
@@ -875,7 +809,7 @@
 #------------------------------------------- MY NOTES -----------------------------------------------
 
 @Techreport{smearing,
-	author			= "Ka\v spar, J.",
+	author			= "J. Ka\v spar",
 	institution		= "TOTEM",
 	title			= "Description and simulation of beam smearing effects",
 	type			= "TOTEM-NOTE"
@@ -884,7 +818,7 @@
 }
 
 @Techreport{el reco,
-	author			= "Ka\v spar, J.",
+	author			= "J. Ka\v spar",
 	institution		= "TOTEM",
     title			= "Reconstruction of elastic events",
 	type			= "TOTEM-NOTE"
@@ -906,8 +840,8 @@
 }
 
 @Article{alfa,
-      author       = "Jenni, Peter and Nordberg, Markus and Nessi, Marzio and
-                      Jon-And, Kerstin",
+	  collaboriation = "ATLAS-ALFA",
+      author       = "P. Jenni et al.",
       title        = "ATLAS Forward Detectors for Measurement of Elastic
                       Scattering and Luminosity",
       publisher    = "CERN",
@@ -918,7 +852,7 @@
 }
 
 @Thesis{master,
-      author       = "Kaspar, Jan and Kundrat, V",
+      author       = "J. Ka\v spar",
       title        = "High energy diffraction processes - TOTEM experiment.
                       oai:cds.cern.ch:1261396",
       school       = "Prague, Charles University in Prague, Faculty of
@@ -943,13 +877,13 @@
 }
 
 @Url{chyla,
-	author="J.~Ch\' yla",
+	author="J. Ch\' yla",
 	title="Course on Quarks, Partons and Quantum Chromodynamics",
-	url="http://www-hep2.fzu.cz/~chyla/lectures/text.pdf"
+	url="\hfil\break http://www-hep2.fzu.cz/~chyla/lectures/text.pdf"
 }
 
 @Book{peskin,
-  author = "Michael E. Peskin and Dan V. Schroeder",
+  author = "M. E. Peskin and D. V. Schroeder",
   publisher = "Westview Press",
   title = "An Introduction To Quantum Field Theory (Frontiers in Physics)",
   year = "1995",
@@ -962,4 +896,20 @@
   title = "High-Energy Particle Diffraction",
   year = "2002",
   isbn = "3-540-42107-6"
+}
+
+@Book{formanek QM,
+	author = "J. Form\' anek",
+	title = "\' Uvod do kvantov\' e teorie",
+	publisher = "Academia",
+	year = "2004",
+	ISBN= "80-200-1176-5"
+}
+
+@Book{formanek QFT,
+	author = "J. Form\' anek",
+	title = "\' Uvod do relativistick\' e kvantov\' e mechaniky a kvantov\' e teorie pole",
+	publisher = "Karolinum",
+	year = "2000",
+	ISBN= "80-246-0063-3"
 }
