--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -39,8 +39,7 @@
 \vskip3cm
 \centerline{\fPbxiv Jan Ka\v spar}
 \vskip1cm
-\centerline{\fPbxx Diffractive process at high energies}
-\centerline{\fPbxx -- TOTEM experiment}
+\centerline{\fPbxx Elastic scattering at the LHC}
 \vskip2cm
 \centerline{\fPbxiv Institute of Particle and Nuclear Physics}
 \ialign to\hsize{\tabskip 0pt plus1fil\strut #&\hfil\fPbxiv #\ \tabskip0pt&\fPbxiv #\hfil\tabskip 0pt plus1fil\cr
